force-app/main/default/objects/Calendar_Build_Setting__mdt/fields/Batch_Size_for_Status_Correction_Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size_for_Status_Correction_Batch__c</fullName>
    <inlineHelpText>Configured batch size for drive status correction batch</inlineHelpText>
    <label>Batch Size for Status Correction Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>