force-app/main/default/objects/Calendar_Build_Setting__mdt/fields/Bypass_Auto_Drive_Generation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Auto_Drive_Generation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, the drive generation job won&#39;t run after an opportunity has been cloned.</description>
    <label>Bypass Auto Drive Generation</label>
    <type>Checkbox</type>
</CustomField>