force-app/main/default/objects/Calendar_Build_Setting__mdt/fields/Draft_Drives_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Draft_Drives_Batch_Size__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Batch size for draft drives.</description>
    <label>Draft Drives Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>