force-app/main/default/objects/Calendar_Build_Setting__mdt/fields/No_of_Days_for_Calendar_Build_Batch__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_for_Calendar_Build_Batch__c</fullName>
    <inlineHelpText>Number of days after drive completion (Complete/Cancel/Confirmed)</inlineHelpText>
    <label>No. of Days for Calendar Build Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>