force-app/main/default/objects/Calendar_Build_Setting__mdt/fields/No_of_Days_for_Status_Correction_Batch__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_for_Status_Correction_Batch__c</fullName>
    <inlineHelpText>Configured number of Days after Drive Completion for Drive Status Correction Batch</inlineHelpText>
    <label>No. of Days for Status Correction Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>