force-app/main/default/objects/Calendar_Build_Setting__mdt/fields/No_of_Days_for_Sys_Gen_Batch_FS__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_for_Sys_Gen_Batch_FS__c</fullName>
    <inlineHelpText>Number of days after drive creation for Fixed Site Drives</inlineHelpText>
    <label>No. of Days for Sys Gen Batch - FS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>