force-app/main/default/objects/Calendar_Build_Setting__mdt/fields/No_of_Days_for_Sys_Gen_Batch_Mobile__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_for_Sys_Gen_Batch_Mobile__c</fullName>
    <label>No. of Days for Sys Gen Batch - Mobile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>