force-app/main/default/objects/Calendar_Build_Setting__mdt/fields/System_Gen_Drives_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>System_Gen_Drives_Batch_Size__c</fullName>
    <defaultValue>1</defaultValue>
    <label>System Gen Drives Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>