force-app/main/default/objects/Calendar_Build_Setting__mdt/fields/System_Gen_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>System_Gen_Start_Date__c</fullName>
    <description>Specify the date range for resource allocation job to execute for.</description>
    <inlineHelpText>Specify the date range for resource allocation job to execute for.</inlineHelpText>
    <label>System Gen Start Date</label>
    <type>Date</type>
</CustomField>