force-app/main/default/objects/Calendar_Build_Setting__mdt/validationRules/System_Gen_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>System_Gen_Date_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>!Automation_Flag__c &amp;&amp;
((
Date_Literal__c = &#39;&#39; &amp;&amp;
(ISNULL(System_Gen_End_Date__c) ||
ISNULL(System_Gen_Start_Date__c))
)
||
(
Date_Literal__c &lt;&gt; &#39;&#39; &amp;&amp;
(!ISNULL(System_Gen_End_Date__c) || 
!ISNULL(System_Gen_Start_Date__c))
)
||
(
Date_Literal__c = &#39;&#39; &amp;&amp;
System_Gen_End_Date__c &lt; System_Gen_Start_Date__c
))</errorConditionFormula>
    <errorMessage>Since automation is off, provide data for Date Literal OR System Gen Start Date and System Gen End Date fields.  If Date Literal is used, System Gen Date fields need to be blank and Start Date needs to be before End Date.</errorMessage>
</ValidationRule>